Darkmode added and bug fixes

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     -->
     <title>Libman++</title>
   </head>
-  <body>
+  <body class="background-white">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="background-white"></div>
   </body>
 </html>
